kubernetes-manifests/servicea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea
spec:
  selector:
    matchLabels:
      app: servicea
  template:
    metadata:
      labels:
        app: servicea
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ryanvade/servicea
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: servicea
spec:
  type: ClusterIP
  selector:
    app: servicea
  ports:
  - name: http
    port: 3000
    targetPort: 3000
