kubernetes-manifests/istio-mtls-default-ns.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
        name: "default"
spec:
        mtls:
                mode: STRICT
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
        name: "mongo-access"
        namespace: "default"
spec:
        selector:
                matchLabels:
                        name: mongo
        portLevelMtls:
                27017:
                        mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
        name: deny-all
        namespace: default
spec:
        {}
