kubernetes-manifests/serviceb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceb
spec:
  selector:
    matchLabels:
      app: serviceb
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ryanvade/serviceb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: serviceb
spec:
  type: ClusterIP
  selector:
    app: serviceb
  ports:
  - name: http
    port: 8088
    targetPort: 8088
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "serviceb-public-access"
  namespace: default
spec:
  selector:
    matchLabels:
      app: serviceb
  rules:
  - to:
    - operation:
        methods: ["GET"]
