kubernetes-manifests/servicec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicec
spec:
  selector:
    matchLabels:
      app: servicec
  template:
    metadata:
      labels:
        app: servicec
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ryanvade/servicec
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: servicec
spec:
  type: ClusterIP
  selector:
    app: servicec
  ports:
  - name: http
    port: 3000
    targetPort: 3000
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "servicec-internal-access"
  namespace: default
spec:
  selector:
    matchLabels:
      app: servicec
  rules:
  - from:
    - source:
        principals: ["servicea"]
  - to:
    - operation:
        methods: ["GET"]
